# editorial-ai-worker

./: .env.example  .gitignore  README.md  pyproject.toml  test_supabase.py
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/phases/01-graph-skeleton-llm-integration/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-USER-SETUP.md  01-VERIFICATION.md
.planning/phases/02-data-layer/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-USER-SETUP.md  02-VERIFICATION.md
.planning/phases/03-curation-agent/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-CONTEXT.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
admin/: .env.local.example  next.config.ts  package.json  pnpm-lock.yaml
admin/src/: config.ts
data/contents/: 0bd8e21f-2f81-4e3c-8741-0c0031b47c69.json  1572212f-117c-4024-996e-f203447dad5c.json  2f7378c0-bce9-4846-b7b8-01ca0a5f9a2c.json  32ad44e2-78c0-4065-9dc9-a8731e3cf6ac.json  78ba3006-8522-407f-ab66-061ddbb44305.json  7a931ea5-ae89-4aa0-926d-f66b3baf4927.json  7e738dce-53f0-44fb-9fa2-8d5f5cdff430.json  9e5bbc65-f3bc-4cc9-9872-eaf1f73e496d.json  aa919445-b899-422f-9a51-4654a478d7c4.json  c0bda489-c1f4-4953-9bc4-1c50a1899759.json  c7b37e70-10ac-4394-8872-e9a58f0003f3.json  c911625d-43d2-4384-859f-df8d9cb25b88.json  dee6ec30-aad8-4cde-b265-54dd540d9a0a.json  e4fb3776-dc75-4a5c-851d-34e2ccee32a8.json
docs/: SYSTEM_SPEC.md  pipeline-diagram.excalidraw
scripts/: output_layout.json  run_pipeline.py  run_pipeline_fast.py  run_pipeline_multi.py  run_pipeline_test.py  seed_sample_data.sql  test_grounding.py
src/editorial_ai/: __init__.py  checkpointer.py  config.py  graph.py  llm.py  state.py
supabase/migrations/: 001_editorial_contents.sql
tests/: test_admin_gate_node.py  test_api_admin.py  test_cache_manager.py  test_checkpointer.py  test_content_service.py  test_curation_node.py  test_curation_service.py  test_editorial_models.py  test_editorial_node.py  test_editorial_service.py  test_enrich_from_posts.py  test_enrich_node.py  test_enrich_service.py  test_graph.py  test_llm.py  test_model_router.py  test_review_node.py  test_review_service.py  test_rubrics.py  test_services.py
(+230 files in other folders)
